--- a/src/styles/molecule-svg.css
+++ b/src/styles/molecule-svg.css
@@ -23,7 +23,14 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cg stroke='currentColor' fill='currentColor' stroke-linecap='round' stroke-linejoin='round'%3E%3Cline x1='49' y1='54' x2='49' y2='32' stroke-width='2.5'/%3E%3Cline x1='51' y1='54' x2='51' y2='32' stroke-width='2.5'/%3E%3Cline x1='50' y1='54' x2='32.68' y2='64.00' stroke-width='2.5'/%3E%3Cline x1='50' y1='54' x2='67.32' y2='64.00' stroke-width='2.5'/%3E%3Ccircle cx='50' cy='54' r='7' stroke-width='1.5'/%3E%3Ccircle cx='50' cy='32' r='7' stroke-width='1.5'/%3E%3Ccircle cx='32.68' cy='64.00' r='7' stroke-width='1.5'/%3E%3Ccircle cx='67.32' cy='64.00' r='7' stroke-width='1.5'/%3E%3C/g%3E%3C/svg%3E");
 }
 
-
+.mol-label.no2-svg::before,
+.mol-label.no2-mono-svg::before {
+  transform: translateY(-0.1em);
+}
+.mol-label.o3-svg::before,
+.mol-label.o3-mono-svg::before {
+  transform: translateY(-0.2em);
+}
 
 .mol-label {
   display: inline-block;
