--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,8 @@
 .popup-card--outline {
    outline: 1px solid rgb(var(--v-theme-surface-variant));
  }
+ 
+ 
+ .v-toolbar-title > .v-toolbar-title__placeholder {
+  user-select: none;
+} 
